ProjetCompil/Verif/Test/fail/typeNonCompatible6.cas
program
	A : real;
	B : boolean;
begin
	A := B;
end.
	
